data/diff_tests/wasmtime/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1989.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\93\80\80\80\00\01\03\65\6e\76\0b\65"
    "\78\74\65\72\6e\5f\66\75\6e\63\00\00\03\82\80\80"
    "\80\00\01\00\07\8d\80\80\80\00\01\09\74\65\73\74"
    "\5f\66\75\6e\63\00\01\0a\97\80\80\80\00\01\91\80"
    "\80\80\00\00\02\7f\10\00\45\04\40\41\00\0d\00\0b"
    "\41\01\0b\0b"
  )
""
)